--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ providers/HomeDirectory/__pycache__/*
 providers/Modules/__pycache__/*
 providers/ResearchComputingAtIU/__pycache__/*
 .DS_Store
+providers/Accounts/__pycache__/*
