Add JupyterLab Hierarchy Browser extension
- Created federated JupyterLab extension using cookiecutter template
- Implemented Hello World launcher item that opens new tab
- Extension appears in JupyterLab Launcher under 'Other' category
- End users can install with pip only (no npm required)
- Uses TypeScript with JupyterLab 4.x APIs
- Built and tested successfully with development installation
- Extension follows modern JupyterLab extension architecture
- Ready for further development with hierarchy browser functionality

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ providers/Modules/__pycache__/*
 providers/ResearchComputingAtIU/__pycache__/*
 .DS_Store
 providers/Accounts/__pycache__/*
+media/t/*
+
