--- a/browsers/Jupyter/hierarchy_browser/package.json
+++ b/browsers/Jupyter/hierarchy_browser/package.json
@@ -60,6 +60,7 @@
   "dependencies": {
     "@jupyterlab/application": "^4.0.0",
     "@jupyterlab/launcher": "^4.0.0",
+    "@jupyterlab/services": "^7.0.0",
     "@lumino/widgets": "^2.0.0"
   },
   "devDependencies": {
