--- a/browsers/Jupyter/hierarchy_browser/pyproject.toml
+++ b/browsers/Jupyter/hierarchy_browser/pyproject.toml
@@ -22,6 +22,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
 ]
 dependencies = [
+    "jupyter-server>=1.6,<3",
 ]
 dynamic = ["version", "description", "authors", "urls", "keywords"]
 
@@ -38,6 +39,7 @@ exclude = [".github", "binder"]
 [tool.hatch.build.targets.wheel.shared-data]
 "hierarchy_browser/labextension" = "share/jupyter/labextensions/hierarchy-browser"
 "install.json" = "share/jupyter/labextensions/hierarchy-browser/install.json"
+"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"
 
 [tool.hatch.build.hooks.version]
 path = "hierarchy_browser/_version.py"
